--- a/submit/Part2_NongMinhHieu_ML_Task.ipynb
+++ b/submit/Part2_NongMinhHieu_ML_Task.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "racial-ivory",
    "metadata": {},
    "source": [
     "# Importing libraries"
@@ -10,12 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "brilliant-canyon",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'nltk'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-daf736c12655>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstyle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'seaborn-darkgrid'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorpus\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstopwords\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mword_tokenize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstem\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mWordNetLemmatizer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
+    "import os\n",
     "# import spacy\n",
     "import string\n",
     "import datetime\n",
@@ -36,14 +47,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "popular-oriental",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "banned-rapid",
    "metadata": {},
    "source": [
     "# Loading and exploring data"
@@ -52,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "going-textbook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "north-denial",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +256,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "independent-decade",
    "metadata": {},
    "source": [
     "# Exploratory Data Analysis and Data Cleaning"
@@ -258,7 +264,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "blond-continuity",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +294,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "posted-springer",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +316,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "portuguese-smooth",
    "metadata": {},
    "source": [
     "### We can see that some date strings do not satisfy the format \"%B %d, %Y\" "
@@ -321,7 +324,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "julian-terry",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +351,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "automated-obligation",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +385,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "excessive-teddy",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "special-change",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +447,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capable-broadway",
    "metadata": {},
    "source": [
     "### Now that most of the rows satisfies the date format, drop the remaining rows"
@@ -457,7 +455,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "opened-affair",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +494,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "armed-recruitment",
    "metadata": {},
    "source": [
     "### I assume that politics and politicsNews are the same type so I will merge them"
@@ -506,7 +502,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "emotional-program",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +520,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "tough-reception",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +538,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "identified-mozambique",
    "metadata": {},
    "source": [
     "### Display frequencies of fake and real news by months\n",
@@ -558,7 +551,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "hundred-america",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +595,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thrown-belize",
    "metadata": {},
    "source": [
     "### Fake news frequency by subject\n",
@@ -616,7 +607,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "domestic-sessions",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +637,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "controlling-lloyd",
    "metadata": {},
    "source": [
     "# Text data cleaning and exploration\n",
@@ -657,7 +646,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "packed-reservation",
    "metadata": {},
    "source": [
     "## 1. Expand contraction\n",
@@ -667,7 +655,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "unknown-rwanda",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +723,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "focused-america",
    "metadata": {},
    "source": [
     "## 2. Lowercasing text"
@@ -745,7 +731,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "respective-blend",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +751,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "environmental-first",
    "metadata": {},
    "source": [
     "## 3. Removing digits "
@@ -775,7 +759,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "protecting-jacket",
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +779,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "becoming-error",
    "metadata": {},
    "source": [
     "## 4. Removing punctuations \n",
@@ -806,7 +788,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "entitled-conflict",
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +809,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "focal-pottery",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +829,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "different-radiation",
    "metadata": {},
    "source": [
     "## 5. Stop words removal and lemmatization\n",
@@ -860,7 +839,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "featured-giant",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +882,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "fresh-detective",
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1081,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "afraid-cartoon",
    "metadata": {},
    "outputs": [
     {
@@ -1121,9 +1097,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text data vectorization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reload from check point if existed\n",
+    "if(os.path.exists(\"df_final.gzip\")):\n",
+    "    df = pd.read_pickle(\"df_final.gzip\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "honey-confidentiality",
    "metadata": {},
    "outputs": [],
    "source": []
