--- a/submit/Part2_NongMinhHieu_ML_Task.ipynb
+++ b/submit/Part2_NongMinhHieu_ML_Task.ipynb
@@ -1537,7 +1537,10 @@
    "metadata": {},
    "source": [
     "# VI. Conclusion\n",
-    "* All three machine learning models perform well on the task of real-fake news classification"
+    "* All three machine learning models perform well on the task of real-fake news classification with relatively high accuracy and F1 score with Linear SVM performing the best, followed by Naive Bayes and XGBoost. However, the result could be better because the models were trained solely on the title of the news data, totally overseeing other factors like subjects or the content of the news themselves.\n",
+    "* The reason why Linear SVM and Naive Bayes came first in the list of models is because they are extremely simple and memory efficient algorithms, yet, highly effective for a very wide range of problems. \n",
+    "* XGBoost is included for its high flexibility (a wide range of parameters to be tuned). Furthermore, it makes use of parallel processing. Therefore, the training is more efficient with a large amount of data.\n",
+    "* The most preferred method, in my point of view, is using a pretrained embedding model with a supporting classification model on top. The reason for this is because text data is highly versatile and non-linear. Therefore, it is ideal to use a neural network the learn the pattern of text data and reinforce linearity that facilitates the training process of the classification model."
    ]
   },
   {
